// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoStore Model can add new items and track patches 1`] = `
Array [
  Object {
    "op": "add",
    "path": "/todos/0",
    "value": Object {
      "completed": false,
      "id": 1,
      "title": "Test Todo",
      "userId": 1,
    },
  },
  Object {
    "op": "replace",
    "path": "/todos/0/title",
    "value": "New Label",
  },
]
`;

exports[`TodoStore Model can add new todos and track snapshots 1`] = `
Object {
  "loading": false,
  "todos": Array [
    Object {
      "completed": false,
      "id": 1,
      "title": "Test Todo",
      "userId": 1,
    },
  ],
}
`;

exports[`TodoStore Model can add new todos and track snapshots 2`] = `
Array [
  Object {
    "loading": false,
    "todos": Array [
      Object {
        "completed": false,
        "id": 1,
        "title": "Test Todo",
        "userId": 1,
      },
    ],
  },
]
`;
